Extract craft solver into shared Java 8 solver-core module
Move RecipeGraphSolver + PlannedStep + their 39-test suite out of the
Stonecutter src/ tree into a standalone pure-Java-8 module at solver-core/,
so a planned legacy-Forge 1.12.2 build can compile the exact same source
(Java 8 has no records/sealed types, and 1.12.2 runs on a Java 8 runtime).

The downgrade is backward-compatible: records -> final classes, sealed
Result -> plain interface, List.of() -> Collections.emptyList(), preserving
every accessor name so the modern callers (CraftPlanner) need no changes.
Each of the three per-node build scripts folds solver-core/src/{main,test}
in via srcDir, so the classes still ship inside every mod jar.

Verified: all 6 nodes (1.21.1 / 26.1.2 / 26.2 x fabric/neoforge) build green
and the 39-case solver suite passes on each.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>